Closed
Bug 1630828
Opened 5 years ago
Closed 5 years ago
macOS Control-left-clicks on bookmark pop-ups follow the bookmark (instead of showing context menu)
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla80
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: bradwerth, Assigned: edgar)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to Reproduce:
- Ensure that View -> Toolbars -> Bookmarks Toolbar is on.
- Add a bookmark folder to the Bookmark Toolbar. It can be "New Folder".
- Add a bookmark or move a bookmark into the New Folder.
- Click on the New Folder, displaying the pop-up bookmark menu.
- Hold down Control key and left-click on the bookmark added in Step 3.
Expected Results:
A context menu appears, starting with "Open in a New Tab".
Actual Results:
Context menu appears briefly, then disappears, and the browser navigates to the bookmark.
| Assignee | ||
Comment 1•5 years ago
|
||
Thanks for catching this bug, I will take a look.
Assignee: nobody → echen
| Assignee | ||
Comment 2•5 years ago
|
||
Filed bug 1630959 as a follow-up to check other places that possibly also need a tweak.
| Assignee | ||
Comment 3•5 years ago
|
||
On Mac, ctrl-click will send a context menu event from the widget, so we don't
want to handle onclick when ctrl key is pressed.
Updated•5 years ago
|
Priority: -- → P2
Updated•5 years ago
|
Severity: -- → S3
Updated•5 years ago
|
Attachment #9141278 -
Attachment description: Bug 1630828 - Don't handle onclick on Mac when ctrl key is pressed; → Bug 1630828 - Handle mouseup properly on Mac when ctrl key is pressed;
| Assignee | ||
Comment 4•5 years ago
|
||
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6d3a1a9c05bd
Handle mouseup properly on Mac when ctrl key is pressed; r=NeilDeakin
Comment 6•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox80:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Updated•5 years ago
|
QA Whiteboard: [qa-80b-p2]
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•