Bug 1630828 - Handle mouseup properly on Mac when ctrl key is pressed; r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D71338